--- a/Website/ClientApp/package.json
+++ b/Website/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
+    "angular-cli-ghpages": "^0.5.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
