--- a/Website/ClientApp/package.json
+++ b/Website/ClientApp/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
+    "postscribe": "^2.0.8",
     "rehype-autolink-headings": "^2.0.0",
     "rehype-highlight": "^2.0.1",
     "rehype-raw": "^2.0.0",
