--- a/MarkdownConverter/MarkdownConverter.csproj
+++ b/MarkdownConverter/MarkdownConverter.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <RuntimeFrameworkVersion>2.1.17</RuntimeFrameworkVersion>
+    <!-- <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch> -->
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
