--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <RuntimeFrameworkVersion>2.1.17</RuntimeFrameworkVersion>
+    <!-- <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch> -->
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>3.1</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
