--- a/AngularStandalone/angular.json
+++ b/AngularStandalone/angular.json
@@ -35,15 +35,9 @@
                 "output": "./assets"
               }
             ],
-            "styles": [
-              "src/_variables.scss",
-              "src/styles.scss",
-              "src/prism-vsc-dark-plus.css"
-            ],
+            "styles": ["src/_variables.scss", "src/styles.scss", "src/prism-vsc-dark-plus.css"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "src"
-              ]
+              "includePaths": ["src"]
             },
             "scripts": []
           },
@@ -53,7 +47,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "3mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -109,34 +103,28 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/_variables.scss",
-              "src/styles.scss",
-              "src/prism-vsc-dark-plus.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/_variables.scss", "src/styles.scss", "src/prism-vsc-dark-plus.css"],
             "scripts": []
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+          }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://takumura.github.io/tech-log/"
           }
         }
       }
     }
   },
   "cli": {
-    "schematicCollections": [
-      "@ngrx/schematics"
-    ],
+    "schematicCollections": ["@ngrx/schematics"],
     "analytics": false
   }
 }
