--- a/TechLogAngularStandalone/package.json
+++ b/TechLogAngularStandalone/package.json
@@ -38,6 +38,7 @@
     "rehype-raw": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "rxjs": "~7.5.6",
