refactor: use DocuPacker library for backent

--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,7 @@ publish/
 !**/packages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
+!**/LocalPackages/*.nupkg
 
 # Microsoft Azure Build Output
 csx/
