--- a/AspNetCoreWebApi/AspNetCoreWebApi.csproj
+++ b/AspNetCoreWebApi/AspNetCoreWebApi.csproj
@@ -1,18 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Net6MarkdownWebEngine.Backend</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Net6Markdown2JsonConverter\Net6Markdown2JsonConverter.csproj" />
+    <PackageReference Include="DocuPacker.AspNetCoreMiddleware" Version="0.1.4" />
+    <PackageReference Include="DocuPacker.JsonIndexPack" Version="0.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
