--- a/TechLogAngularStandalone/.vscode/launch.json
+++ b/TechLogAngularStandalone/.vscode/launch.json
@@ -9,25 +9,11 @@
       "webRoot": "${workspaceFolder}"
     },
     {
-      "type": "pwa-msedge",
+      "type": "edge",
       "request": "launch",
       "name": "localhost (Edge)",
       "url": "https://localhost:4200",
       "webRoot": "${workspaceFolder}"
-    },
-    {
-      "name": "ng serve",
-      "type": "pwa-chrome",
-      "request": "launch",
-      "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
-    },
-    {
-      "name": "ng test",
-      "type": "chrome",
-      "request": "launch",
-      "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
     }
   ]
 }
