--- a/TechLogAngularStandalone/angular.json
+++ b/TechLogAngularStandalone/angular.json
@@ -35,15 +35,9 @@
                 "output": "./assets"
               }
             ],
-            "styles": [
-              "src/_variables.scss",
-              "src/styles.scss",
-              "src/prism-vsc-dark-plus.css"
-            ],
+            "styles": ["src/_variables.scss", "src/styles.scss", "src/prism-vsc-dark-plus.css"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "src"
-              ]
+              "includePaths": ["src"]
             },
             "scripts": []
           },
@@ -109,25 +103,15 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/_variables.scss",
-              "src/styles.scss",
-              "src/prism-vsc-dark-plus.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/_variables.scss", "src/styles.scss", "src/prism-vsc-dark-plus.css"],
             "scripts": []
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         },
         "deploy": {
@@ -140,9 +124,7 @@
     }
   },
   "cli": {
-    "schematicCollections": [
-      "@ngrx/schematics"
-    ],
+    "schematicCollections": ["@ngrx/schematics"],
     "analytics": false
   },
   "schematics": {
